--- a/bin/build
+++ b/bin/build
@@ -6,7 +6,7 @@ GIT_ROOT_DIR=$(git rev-parse --show-toplevel)
 
 # Installs yarn if it is not already installed.
 function looker::install_yarn() {
-  if ! command -v yarn &> /dev/null; then
+  if ! command -v yarn &>/dev/null; then
     npm install -g yarn
   fi
 }
@@ -14,18 +14,18 @@ function looker::install_yarn() {
 # Configures the project if the user has not already done so.
 function looker::configure() {
   looker::install_yarn
-  pushd "$GIT_ROOT_DIR" &> /dev/null
+  pushd "$GIT_ROOT_DIR" &>/dev/null
   if [[ ! -d "$GIT_ROOT_DIR/node_modules" ]]; then
     yarn
   fi
-  popd &> /dev/null
+  popd &>/dev/null
 }
 
 # Builds the target JS file from sources configuring if necessary.
 function looker::build() {
-  pushd "$GIT_ROOT_DIR" &> /dev/null
-  env NODE_OPTIONS="--openssl-legacy-provider" yarn build
-  popd &> /dev/null
+  pushd "$GIT_ROOT_DIR" &>/dev/null
+  env NODE_OPTIONS="--openssl-legacy-provider" yarn run build
+  popd &>/dev/null
 }
 
 # Entry-point.
