--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
   },
   "dependencies": {
     "@babel/core": "7.24.4",
-    "@types/d3": "^5.7.2",
+    "@types/d3": "^5.16.7",
     "babel": "^6.23.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.3.0",
     "d3": "^5.16.0",
     "serialize-javascript": "^3.1.0",
     "ts-loader": "^7.0.5",
-    "typescript": "^5.1.6",
+    "typescript": "^5.5.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0"
+    "webpack": "^4.47.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.1",
-    "jest": "^29.6.1",
-    "ts-jest": "^29.1.1",
-    "webpack-cli": "^3.3.11"
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
+    "webpack-cli": "^3.3.12"
+  },
+  "resolutions": {
+    "serialize-javascript": "^3.1.0"
   }
 }
