--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "babel-loader": "^8.3.0",
     "d3": "^5.16.0",
     "serialize-javascript": "^3.1.0",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^7.0.5",
     "typescript": "^5.5.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.47.0"
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^5.1.4"
   },
   "resolutions": {
     "serialize-javascript": "^3.1.0"
